style.css
/* Normalize CSS */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Actual styling begins */

body {
    background: #90e0ef;
    color: #03045e;
    font-family: Helvetica, sans-serif;
    line-height: 1.5;
    margin: 50px 75px;
}

h1 {
    font-size: 48px;
    padding-bottom: 20px;
    text-align: center;
}

section {
    padding-bottom: 20px;
}

.center {
    display: block;
    margin: 0 auto;
    width: 50%;
}

.crop {
    max-height: 398px;
    max-width: 398px;
}

.attribution {
    font-size: small;
}

.prev-img {
    border-radius: 5%;
    height: 300px;
    object-fit: cover;
    width: 300px;
}

.link-li {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 16px;
    justify-content: center;
    list-style: none;
    margin: 0 auto;
    max-width: 1400px;
    padding: 20px 10px;
    text-align: center;
}

.link-li::after {
    content: "";
    width: 300px;
}

/* Dropdown Navigation */

/* Dropdown Button */
.dropdown-btn {
    /* background-color: #00B4D8; */
    background-color: #0077B6;
    border: none;
    /* color: #03045e; */
    color: white;
    padding: 16px;
    font-size: 16px;
}

/* Container div to position dropdown */
.nav-links {
    display: inline;
    position: relative;
}

/* Dropdown content (hidden unless hovered over) */
.dropdown-content {
    display: none;
    min-width: 160px;
    position: absolute;
    z-index: 1;
}

/* Links inside of dropdown */
.dropdown-content a {
    background-color: #0077B6;
    color: white;
    display: block;
    padding: 12px 16px;
    text-decoration: none;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #ddd;
    color: #03045e;
}

/* Show dropdown menu on hover */
.dropdown:hover .dropdown-content {display: block;} 

/* Change background color of dropdown button when dropdown content is shown */
.dropdown:hover .dropdown-btn {background-color: #005583;}

/* Cookie and chip style for home page */
.cookie {
    background: #DC8821;
    border-radius: 50%;
    height: 350px;
    margin: 0 auto 40px auto;
    width: 350px;
}

.chip {
    background: #422707;
    border-radius: 5px;
    height: 40px;
    position: relative;
    width: 40px;
}

.first {
    left: 20%;
    top: 20%;
    transform: rotate(25deg);
}

.second {
    left: 48%;
    top: -2%;
    transform: rotate(-20deg);
}

.third {
    left: 45%;
    top: 17%;
    transform: rotate(45deg);
}

.fourth {
    left: 13%;
    top: 20%;
    transform: rotate(75deg);
}

.fifth {
    left: 43%;
    top: 28%;
    transform: rotate(110deg);
}

.sixth {
    left: 77%;
    top: 0;
    transform: rotate(15deg);
}

.seventh {
    left: 75%;
    top: -45%;
    transform: rotate(-45deg);
}

